# Departments

00_SystemMonitoring/Systemchecks/: check_status.py
01_SdCustomization/00_Calculator/: SimpleCalculator.cpp
01_SdCustomization/00_Calculator/fltk-taschenrechner/: CMakeLists.txt
01_SdCustomization/00_Calculator/fltk-taschenrechner/Classes/: calculator.h  historyService.cpp
01_SdCustomization/00_Calculator/fltk-taschenrechner/History/Data/Outgoing/: history.txt
01_SdCustomization/00_Calculator/fltk-taschenrechner/UI/Callbacks/: Callbacks.cpp
01_SdCustomization/00_Calculator/fltk-taschenrechner/UI/Main/: UI_MainWindow.h
01_SdCustomization/00_Calculator/fltk-taschenrechner/tests/: test_calculator.cpp
01_SdCustomization/01_QTCalculator/: CMakeLists.txt  calculator.cpp  calculator.h  main.cpp  untitled.ui
01_SdCustomization/01_WarShips/: CMakeLists.txt  README.md  main.cpp
01_SdCustomization/01_WarShips/Context/: Coordinates.h  GamePhase.h  PlayerIntel.h  PlayerNames.h  ShipConfig.h  ShipPlacementData.h  UIContext.h  UIElements.h  xyCoordinates.h
01_SdCustomization/01_WarShips/Draw.io/: WarShips_v0.2.drawio  WarShips_v0.3.drawio  WarShips_v0.4.drawio  WarShips_v0.5.drawio
01_SdCustomization/01_WarShips/Helper/: CoordinateParser.h  InputParser.cpp
01_SdCustomization/01_WarShips/Helper/InputHelper/: InputParser.cpp  InputParser.h
01_SdCustomization/01_WarShips/Helper/UIHelper/: UIHandler.cpp  UIHandler.h
01_SdCustomization/01_WarShips/Models/: GameMaster.cpp  GameMaster.h  Player.cpp  Player.h  Ship.cpp  Ship.h
01_SdCustomization/01_WarShips/Models/Factory/: ShipFactory.cpp  ShipFactory.h
01_SdCustomization/01_WarShips/Models/Helper/InputHelper/: InputParser.cpp  InputParser.h
01_SdCustomization/01_WarShips/Models/ShipModels/: Kreuzer.h  SchlachtSchiff.h  Ship.h  U-Boot.h  Zerstörer.h
01_SdCustomization/01_WarShips/Tests/: test_GameMaster.cpp
01_SdCustomization/01_WarShips/UI/: GameOver_Window.cpp  GameOver_Window.h  Name_Window.cpp  Name_Window.h  Player_Window.cpp  Player_Window.h
01_SdCustomization/01_WarShips/UI/Callbacks/: Callbacks.cpp  Callbacks.h
01_SdCustomization/01_WarShips/client/: NetworkClient.cpp  NetworkClient.h  main.cpp
01_SdCustomization/01_WarShips/client/Helper/GameStateListener/: IGameStateListener.h
01_SdCustomization/01_WarShips/client/Helper/MessageHandler/: ClientMessageHandler.cpp  ClientMessageHandler.h
01_SdCustomization/01_WarShips/client/Helper/UIHelper/: UIHandler.cpp  UIHandler.h
01_SdCustomization/01_WarShips/client/UI/: Name_Window.cpp  Name_Window.h  Player_Window.cpp  Player_Window.h
01_SdCustomization/01_WarShips/client/UI/Callbacks/: Callbacks.cpp  Callbacks.h
01_SdCustomization/01_WarShips/client/UI/LobbyWindow/: Lobby_Window.cpp  Lobby_Window.h
01_SdCustomization/01_WarShips/client/UI/PlayerWindow/: Player_Window.cpp  Player_Window.h
01_SdCustomization/01_WarShips/common/Context/: GameStateDTO.h  LobbyData.h  Session.h  ShipPlacementData.h  inputData.h
01_SdCustomization/01_WarShips/server/: GameMasterAdapter.cpp  LobbyManager.cpp  LobbyManager.h  MessageHandler.cpp  MessageHandler.h  ServerMsgHandler.cpp  main.cpp  server.cpp  server.h
01_SdCustomization/02_BasicServer/: client  client.cpp  server  server.cpp
01_SdCustomization/fltk-taschenrechner/: CMakeLists.txt  calculator.cpp  calculator.h  main.cpp
01_SdCustomization/fltk-taschenrechner/Classes/: calculator.cpp  historyService.cpp
01_SdCustomization/fltk-taschenrechner/Context/: Appcontext.h
01_SdCustomization/fltk-taschenrechner/History/: historyService.cpp  historyService.h
01_SdCustomization/fltk-taschenrechner/History/Data/: history.txt  test.txt  test1.txt
01_SdCustomization/fltk-taschenrechner/History/Data/Incoming/: test1.txt
01_SdCustomization/fltk-taschenrechner/History/Data/Outgoing/: history.txt
01_SdCustomization/fltk-taschenrechner/UI/Callbacks/: Callbacks.cpp  Callbacks.h
01_SdCustomization/fltk-taschenrechner/UI/History/: UI_HistoryWindow.cpp  UI_HistoryWindow.h
01_SdCustomization/fltk-taschenrechner/UI/Main/: UI_MainWindow.cpp  UI_MainWindow.h
01_SdCustomization/fltk-taschenrechner/tests/: test_calculator.cpp
SystemMonitoring/Systemchecks/: check_linux_metrics.py  check_status.py
temp/: calculator.cpp  calculator.h
